<resources>
    <string name="app_name">office hours</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">الرقم السري اقل من 5 حروف وارقام!!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_forgot_password">هل نسيت كلمة المرور؟</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="user_name">Email</string>
    <string name="or">أو</string>
    <string name="studentID">معرف الطالب</string>
    <string name="review">مراجعة</string>
    <string name="date">التاريخ</string>
    <string name="CourseName">اسم المقرر:  </string>
    <string name="status">الحاله</string>
    <string name="btn_reset_password">ارسال </string>
    <string name="yourCourses">مقرراتك</string>
    <string name="addnewCourse">اضافة مقرر جديد</string>
    <string name="add">اضافة</string>
    <string name="info">المعلومات الشخصية</string>
    <string name="name">الاسم:</string>
    <string name="studentid">الرقم الجامعي:</string>
    <string name="depatment">القسم</string>
    <string name="depatment1">القسم:</string>
    <string name="techerName">اسم عضو هيئة التدريس: </string>
    <string name="techerID">معرف عضو هيئة التدريس: </string>
    <string name="courseCode">رمز المقرر: </string>
    <string name="secion">الشعبه: </string>
    <string name="btn_back">رجوع</string>
    <string name="chooseDeprtment">الرجاء اختيار القسم الخاص فيك</string>

    <string name="chooseSection">اختر الشعبة</string>

    <string name="hint_email">ادخل ايميلك</string>
    <string name="lbl_forgot_password">نسيت الرمز؟</string>
    <string name="forgot_password_msg">الرجاء ادخال الايميل حتى يتم ارسال رابط تغيير الرقم السري</string>
    <string name="title_activity_main_page">الساعات المكتبيه</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">اعدادات</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="contact">OH@officehoursksu.firbase.com</string>
    <string name="log_out">Logout</string>
    <string name="title_activity_main_page_teacher">MainPageTeacher</string>
    <string name="sendRequest">ارسال طلب</string>
    <string name="manageCourses">ادارة المقررات</string>
    <string name="receivedRequest">حالة الطلبات</string>
    <string name="nextAppointment">موعدك القادم</string>
    <string name="officeHourse">الساعات المكتبيه</string>
    <string name="requests">الطلبات المتلقاه</string>
    <string name="welcome1">مرحبا</string>
    <string name="noAppointment">لا يوجد لديك موعد</string>
    <string name="courses">المقررات</string>
    <string name="calender">التقويم</string>
    <string name="recentReqs">الطلبات السابقة</string>
    <string name="chooseCourse">اختر مقرر</string>
    <string name="chooseDate">حدد اليوم</string>
    <string name="chooseTime">حدد الوقت</string>
    <string name="writeReason"> هل يوجد لديك سبب</string>
    <string name="timeAvailable">الاوقات المتاح فيها</string>
    <string name="confirm">تأكيد</string>
    <string name="reject">رفض</string>
    <string name="sunday">الاحد</string>
    <string name="moday">الاثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الاربعاء</string>
    <string name="thursday">الخميس</string>
    <string name="to">الى</string>
    <string name="saveInfo">حفظ المعلومات</string>
    <string name="building">المبنى</string>
    <string name="floor">الطابق</string>
    <string name="office">المكتب</string>
    <string name="addCourse">اضافة مقرر</string>
    <string name="newRequests">الطلبات الجديده</string>
    <string name="cancel">الغاء المواعيد</string>
    <string name="confirmedRequests">الطلبات التي تمت الموافقه عليها</string>
    <string name="addtheCourse">اضافة المقرر</string>
    <string name="areYou">هل انت</string>
    <string name="firstName">الاسم الأول</string>
    <string name="notavailable">**اذا كنت غير متاح في يوم معين الرجاء وضع اليوم 0</string>

    <string name="reserveAppointment">حجز موعد</string>
    <string name="search">بحث</string>
    <string name="writeٌReason1">الرجاء كتابة السبب هنا</string>
    <string name="lastName">الأسم الأخير</string>
    <string name="email">الايميل</string>
    <string name="email1">الايميل:</string>
    <string name="password1">الرقم السري</string>
    <string name="signUp">تسجيل جديد</string>
    <string name="sing">تسجيل</string>
    <string name="addSection">اضافة شعبه جديده</string>
    <string name="buildingNO">المبنى:</string>
    <string name="floorNo">الطابق:</string>


</resources>
