<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.addCourseAct"
    android:layoutDirection="rtl">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"

                android:layout_width="match_parent"
                android:layout_height="90dp"

                android:background="@color/md_blue_700"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView555"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_margin="25dp"
                android:text="@string/addCourse"
                android:textColor="@color/colortext"
                android:textStyle="bold"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:id="@+id/txtsearchable"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:hint="@string/chooseCourse"
                android:textSize="20sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:id="@+id/spnsection"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:hint="@string/chooseSection"
                android:textSize="20sp" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/txtTeachername1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/techerName"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTeachername"
                android:layout_toEndOf="@+id/txtTeachername1"
                android:text=""
                android:textSize="22sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/CourseName"
                android:id="@+id/txtCoursename1"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=""
                android:id="@+id/txtCoursename"
                android:layout_toEndOf="@id/txtCoursename1"

                android:textSize="20sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/courseCode"
                android:id="@+id/txtCoursecode1"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=""
                android:id="@+id/txtCoursecode"
                android:layout_toEndOf="@+id/txtCoursecode1"
                android:textSize="20sp"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnaddcourse"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/md_blue_700"
                android:textColor="@color/colortext"
                android:textStyle="bold"
                android:textSize="20sp"

                android:text="@string/addtheCourse" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"/>







    </LinearLayout>


</ScrollView>