<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".teacher.ActTeacherRequests">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/toolbar22"

            android:layout_width="match_parent"
            android:layout_height="90dp"

            android:background="@color/md_blue_700"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
        <TextView
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/receivedRequest"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colortext"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp">


        <TextView

            android:id="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"


            android:text="@string/studentID"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"

            android:text="@string/date"
            android:textSize="20sp" />





    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/requestTeacherRecyclerView"

            android:layout_width="match_parent"
            android:layout_height="580dp"
            />
    </RelativeLayout>






</LinearLayout>









</ScrollView>